Improve sidebar appearance
Make one of the frames invisible, and fix top/bottom margin to be 0.

--- a/src/mainwidget_gui.ui
+++ b/src/mainwidget_gui.ui
@@ -378,7 +378,7 @@ Maximum game move the slider can currently show.</string>
              </size>
             </property>
             <property name="frameShape">
-             <enum>QFrame::StyledPanel</enum>
+             <enum>QFrame::NoFrame</enum>
             </property>
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
@@ -391,13 +391,13 @@ Maximum game move the slider can currently show.</string>
               <number>2</number>
              </property>
              <property name="topMargin">
-              <number>2</number>
+              <number>0</number>
              </property>
              <property name="rightMargin">
               <number>2</number>
              </property>
              <property name="bottomMargin">
-              <number>2</number>
+              <number>0</number>
              </property>
              <item>
               <layout class="QVBoxLayout">
